<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/agent_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agent_list_button" />

        <Button
            android:id="@+id/add_agent_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_agent_button" />

        <View android:background="#CCCCCC"
            android:layout_width = "match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <!--<Button
            android:id="@+id/mission_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agent_mission_button" />-->

        <Button
            android:id="@+id/add_mission_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_mission_button"/>

        <View android:background="#CCCCCC"
            android:layout_width = "match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logout_button" />

    </LinearLayout>

</LinearLayout>